    - added CMake option USE_VS_ANALYZE to enable Visual Studio Code Analysis
    - added CMake option USE_GCC_ANALYZER to enable GCC Static Analysis
    - added processorcount.cmake to get the available threads for the system via NPROC and NPROC_HALF
    - added iwyu.cmake and add a "run-iwyu" target if the "iwyu_tool" executable is available
    - adjusted some includes based on include-what-you-use
    - added ClangBuildAnalyzer.sh for build time analysis (requires a Clang compiler)
        - run it by passing the build command you want to analyze - e.g. "./ClangBuildAnalyzer.sh make clean all"
    - added cppcheck.cmake and add a "run-cppcheck" target if the "cppcheck" executable is available
    - fixed Cppcheck warning
    - cleaned up README.md
    - merged README into README.md
    - updated zlib to 1.2.12 (conan only)
    - disabled "-Wdeclaration-after-statement" for Clang since it just warns about backwards compatibility
    - use pre-increment consistently

    create_report
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - improved error reporting of report type 4 (speed)
    - fixed incorrect "executed" count in the summary when "use_autosave" is set to "1"
    - added "executed with autosave" counter to summary
    - fixed/improved output when "wiki_format" is set to "2"
    - removed support for DocuWiki format ("wiki_format" set to "1")
    - renamed "wiki_format" to "use_markdown"
    - changed extension of "report_10" output to ".md"
    - changed "comparison" report to Markdown format
    - removed "report_type" 3 (tagmap report)
    - removed "tagmap_threshold"
    - added checks for fopen() calls and reported error when it fails
    - return a result from create_report()
    - added option "unexpected_stderr" to check for unexpected stderr messages
    - properly access configuration via report_cb_data

    create_image_xml
    - fixed some CLion inspection warnings