@@ -735,6 +735,7 @@
     - updated zlib to 1.2.12 (conan only)
     - disabled "-Wdeclaration-after-statement" for Clang since it just warns about backwards compatibility
     - use pre-increment consistently
+    - added "hack_str_snapname" for older versions which have the snapname hard-coded to "final.png" with "-str"
 
     create_report
     - fixed some clang-tidy warnings
